--- a/arch/arm/mach-msm/hp/tenderloin/Makefile
+++ b/arch/arm/mach-msm/hp/tenderloin/Makefile
@@ -1,4 +1,6 @@
 obj-$(CONFIG_MACH_TENDERLOIN) += board-tenderloin.o
+obj-$(CONFIG_MACH_TENDERLOIN) += board-tenderloin-pins.o
+obj-$(CONFIG_MACH_TENDERLOIN) += board-tenderloin-storage.o
 obj-$(CONFIG_MACH_TENDERLOIN) += board-tenderloin-gpiomux.o
 obj-$(CONFIG_MACH_TENDERLOIN) += board-tenderloin-keypad.o
 obj-$(CONFIG_MACH_TENDERLOIN) += board-tenderloin-regulator.o
@@ -6,6 +8,7 @@ obj-$(CONFIG_MACH_TENDERLOIN) += board-tenderloin-pmic.o
 obj-$(CONFIG_MACH_TENDERLOIN) += board-tenderloin-ts.o
 obj-$(CONFIG_MACH_TENDERLOIN) += board-tenderloin-usb.o
 obj-$(CONFIG_MACH_TENDERLOIN) += board-tenderloin-a6.o
+obj-$(CONFIG_MACH_TENDERLOIN) += board-tenderloin-rfkill.o
 obj-$(CONFIG_MACH_TENDERLOIN) += a6_sbw_impl_tenderloin.o
 obj-$(CONFIG_MACH_TENDERLOIN) += display/
 
