--- a/arch/arm/mach-msm/htc/Kconfig
+++ b/arch/arm/mach-msm/htc/Kconfig
@@ -1,6 +1,7 @@
 config MACH_HTC
 	bool
-	select FB_MSM_MIPI_DSI
+        select FB_MSM_MIPI_DSI if !ARCH_MSM7X30
+        select FB_MSM_LCDC if ARCH_MSM7X30
 
 menu "HTC Board Selection"
 source "arch/arm/mach-msm/htc/Kconfig.board"
