--- a/arch/arm/configs/vision_defconfig
+++ b/arch/arm/configs/vision_defconfig
@@ -368,6 +368,9 @@ CONFIG_MACH_VISION=y
 #
 # CONFIG_HTC_BATT_ALARM is not set
 # CONFIG_HTC_BATT_CORE is not set
+CONFIG_HTC_BATTCHG=y
+# CONFIG_HTC_BATTCHG_MAX8957 is not set
+CONFIG_HTC_BATTCHG_SMEM=y
 # CONFIG_HTC_HEADSET_MGR is not set
 CONFIG_MICROP_COMMON=y
 
@@ -508,7 +511,7 @@ CONFIG_MSM_MULTIMEDIA_USE_ION=y
 # CONFIG_MSM_HSIC_SYSMON is not set
 # CONFIG_MSM_CPU_PWRCTL is not set
 # CONFIG_MSM_UARTDM is not set
-# CONFIG_REMOVE_EBI1_FIXED_CLK is not set
+CONFIG_REMOVE_EBI1_FIXED_CLK=y
 
 #
 # System MMU
@@ -1225,13 +1228,13 @@ CONFIG_ANDROID_PMEM=y
 # CONFIG_TSPP is not set
 # CONFIG_HAPTIC_ISA1200 is not set
 CONFIG_PMIC8058_PWM=y
-CONFIG_PMIC8XXX_VIBRATOR=y
+# CONFIG_PMIC8XXX_VIBRATOR is not set
 # CONFIG_PMIC8XXX_VIBRATOR_PWM is not set
 # CONFIG_ANDROID_VIBRATOR is not set
 # CONFIG_TOUCHSENSE_VIBRATOR is not set
 # CONFIG_PMIC8XXX_NFC is not set
 # CONFIG_PMIC8XXX_UPL is not set
-CONFIG_PMIC8058_XOADC=y
+# CONFIG_PMIC8058_XOADC is not set
 # CONFIG_QSEECOM is not set
 # CONFIG_QFP_FUSE is not set
 # CONFIG_BU52031NVX is not set
@@ -1840,6 +1843,7 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_BATTERY_DS2780 is not set
 # CONFIG_BATTERY_DS2781 is not set
 # CONFIG_BATTERY_DS2782 is not set
+CONFIG_BATTERY_DS2746=y
 # CONFIG_BATTERY_SBS is not set
 # CONFIG_BATTERY_BQ27x00 is not set
 # CONFIG_BATTERY_MAX17040 is not set
@@ -1859,7 +1863,7 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_LTC4088_CHARGER is not set
 # CONFIG_BATTERY_BCL is not set
 # CONFIG_CHARGER_SMB347 is not set
-CONFIG_MAX8903B_CHARGER=y
+# CONFIG_MAX8903B_CHARGER is not set
 CONFIG_HWMON=y
 # CONFIG_HWMON_VID is not set
 # CONFIG_HWMON_DEBUG_CHIP is not set
@@ -2037,7 +2041,7 @@ CONFIG_MFD_PM8XXX=y
 # CONFIG_MFD_PM8038_CORE is not set
 CONFIG_MFD_PM8XXX_IRQ=y
 # CONFIG_MFD_PM8821_IRQ is not set
-# CONFIG_TPS65200 is not set
+CONFIG_TPS65200=y
 # CONFIG_MFD_TPS65090 is not set
 # CONFIG_MFD_AAT2870_CORE is not set
 CONFIG_MFD_PM8XXX_DEBUG=y
@@ -2294,7 +2298,7 @@ CONFIG_FB_MSM_MDP40=y
 # CONFIG_FB_MSM_MDP_NONE is not set
 # CONFIG_FB_MSM_EBI2 is not set
 # CONFIG_FB_MSM_MDDI is not set
-CONFIG_FB_MSM_MIPI_DSI=y
+# CONFIG_FB_MSM_MIPI_DSI is not set
 CONFIG_FB_MSM_LCDC=y
 # CONFIG_FB_MSM_LVDS is not set
 CONFIG_FB_MSM_OVERLAY=y
