--- a/drivers/input/misc/Kconfig
+++ b/drivers/input/misc/Kconfig
@@ -743,4 +743,11 @@ config INPUT_CAPELLA_CM3602
 	  Say Y here to enable the Capella CM3602 Short Distance Proximity
 	  Sensor with Ambient Light Sensor.
 
+config SENSORS_BMA150_SPI
+        tristate "BMA150 G-sensor Driver"
+	depends on MICROP_COMMON
+        default y
+        help
+         BMA150 G-sensor Driver implemented by HTC.
+
 source "drivers/input/misc/mpu3050/Kconfig"
