--- a/arch/arm/configs/cyanogenmod_m7_defconfig
+++ b/arch/arm/configs/cyanogenmod_m7_defconfig
@@ -1524,7 +1524,11 @@ CONFIG_WLAN=y
 # CONFIG_ATH6K_LEGACY_EXT is not set
 # CONFIG_WCNSS_CORE is not set
 # CONFIG_ATH_COMMON is not set
-# CONFIG_BCMDHD is not set
+CONFIG_BCMDHD=y
+CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/fw_bcm4335_b0.bin"
+CONFIG_BCMDHD_NVRAM_PATH="/etc/calibration"
+CONFIG_DHD_USE_STATIC_BUF=y
+# CONFIG_DHD_USE_SCHED_SCAN is not set
 # CONFIG_BRCMFMAC is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_IWM is not set
@@ -2956,6 +2960,7 @@ CONFIG_MMC_MSM_SDC3_SUPPORT=y
 # CONFIG_MMC_MSM_SDC3_POLLING is not set
 # CONFIG_MMC_MSM_SDC3_8_BIT_SUPPORT is not set
 CONFIG_MMC_MSM_SDC3_WP_SUPPORT=y
+CONFIG_MMC_MSM_SDC3_NEED_PAD_PWR=y
 # CONFIG_MMC_MSM_SDC4_SUPPORT is not set
 # CONFIG_MMC_MSM_SDC5_SUPPORT is not set
 CONFIG_MMC_MSM_SPS_SUPPORT=y
