--- a/arch/arm/configs/cyanogenmod_tenderloin_defconfig
+++ b/arch/arm/configs/cyanogenmod_tenderloin_defconfig
@@ -2916,6 +2916,7 @@ CONFIG_LEDS_GPIO_PLATFORM=y
 # CONFIG_LEDS_RENESAS_TPU is not set
 # CONFIG_LEDS_TCA6507 is not set
 # CONFIG_LEDS_OT200 is not set
+CONFIG_LEDS_LM8502=y
 # CONFIG_LEDS_TRIGGERS is not set
 
 #
