--- a/arch/arm/configs/tenderloin_android_defconfig
+++ b/arch/arm/configs/tenderloin_android_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.76 Kernel Configuration
+# Linux/arm 3.4.82 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -165,6 +165,7 @@ CONFIG_HAVE_KRETPROBES=y
 CONFIG_HAVE_DMA_ATTRS=y
 CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_USE_GENERIC_SMP_HELPERS=y
+CONFIG_GENERIC_SMP_IDLE_THREAD=y
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
@@ -399,6 +400,9 @@ CONFIG_BOARD_HEADER_FILE=""
 #
 # HTC Board Selection
 #
+# CONFIG_MACH_PYRAMID is not set
+# CONFIG_MACH_SHOOTER is not set
+# CONFIG_MACH_RUBY is not set
 # CONFIG_MACH_HTC_DUMMY is not set
 
 #
@@ -407,7 +411,8 @@ CONFIG_BOARD_HEADER_FILE=""
 # CONFIG_HTC_BATT_ALARM is not set
 # CONFIG_HTC_BATT_CORE is not set
 # CONFIG_HTC_HEADSET_MGR is not set
-CONFIG_HTC_WAKE_ON_VOL=y
+# CONFIG_HTC_WAKE_ON_VOL is not set
+# CONFIG_FORCE_FAST_CHARGE is not set
 CONFIG_MACH_HP=y
 
 #
@@ -478,6 +483,8 @@ CONFIG_MSM_RMT_STORAGE_CLIENT=y
 # CONFIG_MSM_RMT_STORAGE_CLIENT_STATS is not set
 CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_DALRPC_TEST is not set
+CONFIG_MSM_MPDEC=y
+# CONFIG_MSM_MPDEC_INPUTBOOST_CPUMIN is not set
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=1188000
 CONFIG_MSM_CPU_FREQ_MIN=192000
@@ -564,8 +571,8 @@ CONFIG_HAVE_ARCH_HAS_CURRENT_TIMER=y
 # CONFIG_MSM_CPU_PWRCTL is not set
 CONFIG_MSM_UARTDM=y
 CONFIG_REMOVE_SMI_2X_CLK=y
-CONFIG_MSM_MPDEC=y
 CONFIG_L2_FREQ_FIXUP=y
+
 #
 # System MMU
 #
@@ -1392,6 +1399,7 @@ CONFIG_SCSI_LOWLEVEL=y
 # CONFIG_ATA is not set
 CONFIG_MD=y
 # CONFIG_BLK_DEV_MD is not set
+CONFIG_BLK_DEV_DM_BUILTIN=y
 CONFIG_BLK_DEV_DM=y
 # CONFIG_DM_DEBUG is not set
 CONFIG_DM_CRYPT=y
@@ -1445,7 +1453,6 @@ CONFIG_NET_VENDOR_MARVELL=y
 CONFIG_NET_VENDOR_MICREL=y
 # CONFIG_KS8851_MLL is not set
 # CONFIG_MSM_RMNET is not set
-# CONFIG_MSM_RMNET_DEBUG is not set
 # CONFIG_QFEC is not set
 CONFIG_NET_VENDOR_NATSEMI=y
 CONFIG_NET_VENDOR_8390=y
@@ -1529,7 +1536,6 @@ CONFIG_USB_USBNET=y
 # CONFIG_USB_NET_INT51X1 is not set
 # CONFIG_USB_IPHETH is not set
 # CONFIG_USB_SIERRA_NET is not set
-# CONFIG_USB_VL600 is not set
 # CONFIG_MSM_RMNET_USB is not set
 CONFIG_WLAN=y
 # CONFIG_USB_ZD1201 is not set
@@ -1644,7 +1650,9 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_LGE_COMMON is not set
 # CONFIG_TOUCHSCREEN_LGE_SYNAPTICS is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
+# CONFIG_TOUCHSCREEN_ATMEL is not set
 # CONFIG_TOUCHSCREEN_ATMEL_224E is not set
+# CONFIG_TOUCHSCREEN_CYPRESS_TMA is not set
 # CONFIG_TOUCHSCREEN_CYPRESS_CS is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_3K is not set
 CONFIG_TOUCHSCREEN_CY8CTMA395=y
@@ -1676,11 +1684,15 @@ CONFIG_PMIC8058_OTHC=y
 # CONFIG_STM_LIS3DH is not set
 # CONFIG_BMP18X is not set
 # CONFIG_SENSORS_AKM8963_NST is not set
+# CONFIG_SENSORS_AKM8963 is not set
 # CONFIG_SENSORS_AKM8975 is not set
 # CONFIG_SENSORS_PANASONIC_GYRO is not set
 # CONFIG_SENSORS_BMA250 is not set
 # CONFIG_SENSORS_BMA250_BOSCH is not set
+# CONFIG_INPUT_CAPELLA_CM3628 is not set
 # CONFIG_INPUT_CAPELLA_CM3629 is not set
+# CONFIG_INPUT_ISL29028 is not set
+# CONFIG_INPUT_ISL29029 is not set
 # CONFIG_SENSORS_R3GD20 is not set
 CONFIG_INPUT_LSM303DLH=y
 CONFIG_INPUT_ISL29023=y
@@ -1749,6 +1761,7 @@ CONFIG_SERIAL_CORE_CONSOLE=y
 # CONFIG_SERIAL_MSM is not set
 CONFIG_SERIAL_MSM_HS=y
 CONFIG_SERIAL_MSM_HS_BRCM=y
+# CONFIG_SERIAL_MSM_HS_TI_DC is not set
 CONFIG_SERIAL_MSM_HSL=y
 # CONFIG_SERIAL_CIR is not set
 CONFIG_SERIAL_MSM_HSL_CONSOLE=y
@@ -2015,11 +2028,11 @@ CONFIG_SENSORS_MSM_ADC=y
 # CONFIG_SENSORS_W83627HF is not set
 # CONFIG_SENSORS_W83627EHF is not set
 CONFIG_THERMAL=y
+CONFIG_THERMAL_TSENS8x60=y
 CONFIG_THERMAL_HWMON=y
 # CONFIG_THERMAL_MSM_POPMEM is not set
 # CONFIG_THERMAL_TSENS is not set
 # CONFIG_THERMAL_TSENS8960 is not set
-CONFIG_THERMAL_TSENS8x60=y
 # CONFIG_THERMAL_TSENS8974 is not set
 # CONFIG_THERMAL_PM8XXX is not set
 # CONFIG_WATCHDOG is not set
@@ -2086,6 +2099,7 @@ CONFIG_MFD_PM8XXX=y
 CONFIG_MFD_PM8XXX_IRQ=y
 # CONFIG_MFD_PM8821_IRQ is not set
 # CONFIG_MFD_TPS65090 is not set
+# CONFIG_MFD_TPS65200 is not set
 # CONFIG_MFD_AAT2870_CORE is not set
 CONFIG_MFD_PM8XXX_DEBUG=y
 # CONFIG_MFD_PM8XXX_PWM is not set
@@ -2268,9 +2282,6 @@ CONFIG_VIDEO_IR_I2C=y
 # CONFIG_V4L_USB_DRIVERS is not set
 CONFIG_V4L_PLATFORM_DRIVERS=y
 # CONFIG_SOC_CAMERA is not set
-# CONFIG_VIDEO_NMI is not set
-CONFIG_ISDBT_NMI=y
-# CONFIG_ISDBT_NMI_DEBUG is not set
 
 #
 # Qualcomm MSM Camera And Video
@@ -2282,18 +2293,62 @@ CONFIG_MSM_CAMERA=y
 #
 # Camera Sensor Selection
 #
+CONFIG_MT9D113=y
 # CONFIG_IMX074 is not set
-# CONFIG_WEBCAM_OV7692 is not set
+# CONFIG_S5K3H2YX is not set
+# CONFIG_S5K6A1GX is not set
+# CONFIG_S5K3H1GX_ACT is not set
+# CONFIG_AR0260 is not set
+# CONFIG_OV2722 is not set
+# CONFIG_OV5640 is not set
+# CONFIG_OV5647 is not set
+# CONFIG_MT9M114 is not set
 CONFIG_WEBCAM_MT9M113=y
-# CONFIG_WEBCAM_MT9M114 is not set
+# CONFIG_WEBCAM_OV7692 is not set
+# CONFIG_WEBCAM_OV9726 is not set
 # CONFIG_VX6953 is not set
+# CONFIG_MT9E013 is not set
+# CONFIG_IMX074_ACT is not set
+# CONFIG_S5K3H2YX_ACT is not set
+CONFIG_QS_S5K4E1=y
+# CONFIG_S5K4E1 is not set
+# CONFIG_S5K3H1GX is not set
+# CONFIG_MSM_CAMERA_FLASH_SC628A is not set
+# CONFIG_IMX072 is not set
+# CONFIG_OV2720 is not set
 # CONFIG_MSM_CAMERA_FLASH is not set
-# CONFIG_VIDEO_MSM is not set
+# CONFIG_MSM_CAMERA_SENSOR is not set
+# CONFIG_MSM_ACTUATOR is not set
 CONFIG_MSM_GEMINI=y
 CONFIG_MSM_VPE=y
+# CONFIG_RAWCHIP is not set
+# CONFIG_RAWCHIPII is not set
+# CONFIG_CAMERA_IMAGE_NONE_BOARD is not set
 CONFIG_QUP_EXCLUSIVE_TO_CAMERA=y
+# CONFIG_S5K3L1YX is not set
+# CONFIG_IMX091 is not set
+# CONFIG_IMX105 is not set
+# CONFIG_IMX175 is not set
+# CONFIG_IMX135 is not set
+# CONFIG_OV8838 is not set
+# CONFIG_IMX175_ACT is not set
+# CONFIG_RUMBAS_ACT is not set
+# CONFIG_AD5823_ACT is not set
+# CONFIG_AD5816_ACT is not set
+# CONFIG_TI201_ACT is not set
+# CONFIG_ACT_OIS_BINDER is not set
+# CONFIG_LC898212_ACT is not set
+# CONFIG_MT9V113 is not set
+# CONFIG_IMX175_2LANE is not set
+# CONFIG_OV5693_ACT is not set
+# CONFIG_OV5693 is not set
+# CONFIG_RAWCHIP_MCLK is not set
+# CONFIG_DISABLE_MCLK_RAWCHIP_TO_MAINCAM is not set
+# CONFIG_S5K6A2YA is not set
+# CONFIG_S5K6AAFX is not set
+# CONFIG_VD6869 is not set
+# CONFIG_OV4688 is not set
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
-CONFIG_MSM_VIDC=y
 # CONFIG_MSM_WFD is not set
 # CONFIG_RADIO_ADAPTERS is not set
 
@@ -2567,7 +2622,6 @@ CONFIG_USB_HID=y
 #
 # Special HID drivers
 #
-CONFIG_HID_GENERIC=y
 CONFIG_HID_A4TECH=y
 # CONFIG_HID_ACRUX is not set
 # CONFIG_HID_APPLE is not set
@@ -2744,6 +2798,7 @@ CONFIG_USB_SERIAL=y
 # CONFIG_USB_SERIAL_SAFE is not set
 # CONFIG_USB_SERIAL_SIEMENS_MPI is not set
 # CONFIG_USB_SERIAL_SIERRAWIRELESS is not set
+# CONFIG_USB_SERIAL_SIERRAWIRELESS_SWI is not set
 # CONFIG_USB_SERIAL_SYMBOL is not set
 # CONFIG_USB_SERIAL_TI is not set
 # CONFIG_USB_SERIAL_CYBERJACK is not set
@@ -2852,6 +2907,7 @@ CONFIG_MMC_UNSAFE_RESUME=y
 # CONFIG_MMC_CLKGATE is not set
 # CONFIG_MMC_EMBEDDED_SDIO is not set
 # CONFIG_MMC_PARANOID_SD_INIT is not set
+# CONFIG_MMC_NO_BKOPS is not set
 
 #
 # MMC/SD/SDIO Card Drivers
@@ -2862,6 +2918,7 @@ CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_MMC_BLOCK_DEFERRED_RESUME is not set
 # CONFIG_SDIO_UART is not set
 # CONFIG_MMC_TEST is not set
+# CONFIG_MMC_TI_SDIO_ADAPT is not set
 
 #
 # MMC/SD/SDIO Host Controller Drivers
@@ -2901,6 +2958,7 @@ CONFIG_LEDS_GPIO_PLATFORM=y
 # CONFIG_LEDS_LP5523 is not set
 # CONFIG_LEDS_PCA955X is not set
 # CONFIG_LEDS_PM8XXX is not set
+# CONFIG_LEDS_PM8038 is not set
 # CONFIG_LEDS_PCA9633 is not set
 # CONFIG_LEDS_REGULATOR is not set
 # CONFIG_LEDS_BD2802 is not set
@@ -2921,6 +2979,7 @@ CONFIG_LEDS_LM8502=y
 # LED Flashlights
 #
 # CONFIG_FLASHLIGHT_TPS61310 is not set
+# CONFIG_FLASHLIGHT_AAT is not set
 CONFIG_SWITCH=y
 CONFIG_SWITCH_GPIO=y
 # CONFIG_SWITCH_FSA8008 is not set
